Add task_4 10 epoch 256dim

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,9 +393,9 @@
     "\n",
     "class NeuralNet(nn.Module):\n",
     "    \n",
-    "    EMBEDDING_DIM = 128\n",
+    "    EMBEDDING_DIM = 256\n",
     "    \n",
-    "    def __init__(self, inp = 2208, h1=512, d=0.35):\n",
+    "    def __init__(self, inp = 2208, h1=1024, d=0.35):\n",
     "        super(NeuralNet, self).__init__()\n",
     "        self.fc = nn.Sequential(\n",
     "            nn.Linear(inp, h1),\n",
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,9 +720,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1436,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 97,
    "metadata": {
     "scrolled": false
    },
@@ -1488,12 +1488,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f88085620ed44171be4a24c8978ae830",
+       "model_id": "2927e102bf3940cda0f02aa4b0d13300",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=18732.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=8920.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1502,7 +1502,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dca777033dbf48db884b1cd1a046615e",
+       "model_id": "84cc4e9e32f14d1bad818ab694b972f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1534,13 +1534,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 20/21]: Loss 0.104 (0.118), Val Accuracy 0.7521008403361344, Train Accuracy 0.7473899943946188\n"
+      "\r",
+      "\r",
+      "[Epoch 1/10]: Loss 0.419 (0.457), Val Accuracy 0.6878151260504202, Train Accuracy 0.6319716928251121\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acdb30a1c7324513b95746cb1cb5561c",
+       "model_id": "339bfa91d4284fff92b18fc5d2c284a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1572,13 +1574,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 21/21]: Loss 0.128 (0.118), Val Accuracy 0.7600840336134453, Train Accuracy 0.7471447589686099\n"
+      "\r",
+      "\r",
+      "[Epoch 2/10]: Loss 0.300 (0.364), Val Accuracy 0.6957983193277311, Train Accuracy 0.6385054652466368\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c45a257780e40a59a5ced00ad59b2c3",
+       "model_id": "da64e7b375744d499956c8148984352d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1610,13 +1614,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 22/21]: Loss 0.084 (0.116), Val Accuracy 0.761344537815126, Train Accuracy 0.7529603419282511\n"
+      "\r",
+      "\r",
+      "[Epoch 3/10]: Loss 0.284 (0.296), Val Accuracy 0.6764705882352942, Train Accuracy 0.6467558856502242\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "813ac4eea3854a3faa3845626945d7f6",
+       "model_id": "4477fb50d15e4e26962c7a5ef5f74152",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1648,13 +1654,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 23/21]: Loss 0.087 (0.115), Val Accuracy 0.7663865546218488, Train Accuracy 0.7531004764573991\n"
+      "\r",
+      "\r",
+      "[Epoch 4/10]: Loss 0.181 (0.240), Val Accuracy 0.704201680672269, Train Accuracy 0.6621706838565022\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a820cefb8a264248a0d6c229dd02064f",
+       "model_id": "6509970dd7c143bd8661ee4959425d8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1686,13 +1694,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 24/21]: Loss 0.111 (0.113), Val Accuracy 0.7697478991596639, Train Accuracy 0.7589686098654709\n"
+      "\r",
+      "\r",
+      "[Epoch 5/10]: Loss 0.251 (0.200), Val Accuracy 0.7226890756302521, Train Accuracy 0.6717523822869955\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c21e6af8ac2c4ca6999bca133de78508",
+       "model_id": "a347f87a86d94010a02898be10017936",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1724,13 +1734,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 25/21]: Loss 0.116 (0.112), Val Accuracy 0.7802521008403361, Train Accuracy 0.7604400224215246\n"
+      "\r",
+      "\r",
+      "[Epoch 6/10]: Loss 0.179 (0.168), Val Accuracy 0.7134453781512605, Train Accuracy 0.6831207959641256\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71a42ba19852434cb7dca768f4518c99",
+       "model_id": "31afcecfd62042fc8157c24e8e40ba02",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1762,13 +1774,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 26/21]: Loss 0.078 (0.111), Val Accuracy 0.7743697478991597, Train Accuracy 0.7629098934977578\n"
+      "\r",
+      "\r",
+      "[Epoch 7/10]: Loss 0.146 (0.150), Val Accuracy 0.7315126050420168, Train Accuracy 0.690985846412556\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b3d84f0eb3e414d9371a600dcbf04b0",
+       "model_id": "73ff87de9112450799d0cb5ceabf589a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1800,13 +1814,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 27/21]: Loss 0.105 (0.110), Val Accuracy 0.7747899159663866, Train Accuracy 0.7664658071748879\n"
+      "\r",
+      "\r",
+      "[Epoch 8/10]: Loss 0.162 (0.139), Val Accuracy 0.7407563025210084, Train Accuracy 0.7013558015695067\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a915bc47bbc041ca8ba66ecea468a59d",
+       "model_id": "423dfa1cc7b248a4aa417c8d5dc975ce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1838,13 +1854,15 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 28/21]: Loss 0.132 (0.109), Val Accuracy 0.7718487394957984, Train Accuracy 0.7679722533632287\n"
+      "\r",
+      "\r",
+      "[Epoch 9/10]: Loss 0.135 (0.133), Val Accuracy 0.7357142857142858, Train Accuracy 0.7124264293721974\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dad6630d6d2049399e8d302c490e8994",
+       "model_id": "520b66da0dc2468bba03b829de1fdd29",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1876,442 +1894,26 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 29/21]: Loss 0.124 (0.108), Val Accuracy 0.769327731092437, Train Accuracy 0.76953125\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8ae3cf55c344ab8b93696807dd5ba61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "\r",
       "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 30/21]: Loss 0.110 (0.104), Val Accuracy 0.7722689075630252, Train Accuracy 0.7772561659192825\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdcd7e49a32048f480ea5df5e897ff02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 31/21]: Loss 0.111 (0.101), Val Accuracy 0.7928571428571428, Train Accuracy 0.7868728979820628\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e95b2df1c8c4ef3a7fdefa9feb7e794",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 32/21]: Loss 0.059 (0.099), Val Accuracy 0.7865546218487395, Train Accuracy 0.7888873318385651\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2882260429aa406cb986a11271c83858",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 33/21]: Loss 0.131 (0.099), Val Accuracy 0.7840336134453781, Train Accuracy 0.7912345852017937\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "702d9071e34d456d8950aa20a5b2db8d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 34/21]: Loss 0.127 (0.098), Val Accuracy 0.7848739495798319, Train Accuracy 0.7924957959641256\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e9a828c7c0847d39c06d80adb4f9fd7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 35/21]: Loss 0.074 (0.098), Val Accuracy 0.7903361344537815, Train Accuracy 0.7964721132286996\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d8eb8af3413404e96af50fe5206cd34",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 36/21]: Loss 0.077 (0.097), Val Accuracy 0.7819327731092437, Train Accuracy 0.796734865470852\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8a88ef3c7b3459c86b932fd7a6a2892",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 37/21]: Loss 0.106 (0.095), Val Accuracy 0.7865546218487395, Train Accuracy 0.7994324551569507\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "509081affc254b87891a2a3909539b4d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 38/21]: Loss 0.090 (0.095), Val Accuracy 0.7924369747899159, Train Accuracy 0.800536014573991\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba15e992bd974d1c9288e1607c0074ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 39/21]: Loss 0.079 (0.093), Val Accuracy 0.7949579831932773, Train Accuracy 0.804021860986547\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0443b4c4010248ac9207c495b23464b1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 40/21]: Loss 0.098 (0.094), Val Accuracy 0.792016806722689, Train Accuracy 0.8016921244394619\n"
+      "[Epoch 10/10]: Loss 0.137 (0.130), Val Accuracy 0.7357142857142858, Train Accuracy 0.7173486547085202\n"
      ]
     }
    ],
    "source": [
-    "model_pretrained.load_state_dict(torch.load('trained_models/densenet161_model/densenet161_model_epoch19.pth'))\n",
-    "model_pretrained = model_pretrained.to(device)\n",
+    "#model_pretrained.load_state_dict(torch.load('trained_models/densenet161_model/densenet161_model_epoch19.pth'))\n",
+    "#model_pretrained = model_pretrained.to(device)\n",
     "\n",
     "criterion_pretrained = nn.TripletMarginLoss(margin=0.2)\n",
-    "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=0.0005)\n",
+    "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=0.001)\n",
     "#scheduler_pretrained = None\n",
     "scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[10], gamma=0.5)\n",
     "#scheduler_pretrained = torch.optim.lr_scheduler.StepLR(optimizer_pretrained, 2, gamma=0.1)\n",
     "\n",
     "batch_size = 64\n",
-    "epochs_pretrained = 21\n",
+    "epochs_pretrained = 10\n",
     "\n",
-    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, starting_epoch=19, epochs=epochs_pretrained, model_name='densenet161_model')"
+    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, epochs=epochs_pretrained, model_name='densenet161_model')"
    ]
   },
   {
@@ -2323,13 +1925,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "805c744e2b104fc5bfbcebdd20a340fd",
+       "model_id": "1e74f01f31704e88a6ed364919473857",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2354,14 +1956,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy [pre-trained model]: 0.8014842300556586\n"
+      "Train set accuracy [pre-trained model]: 0.7290580039906186\n"
      ]
     }
    ],
@@ -2371,13 +1973,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82fa37c5add947b7a0f0c9a03da6ebea",
+       "model_id": "cbc13f22082440a1854c4ffc6fc56e7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2403,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
