--- a/task_3/taks_3_v2/task_3.ipynb
+++ b/task_3/taks_3_v2/task_3.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "### Step 3. Preparing data and One Hot Encoding.\n",
     "\n",
-    "Taking into account that Protein molecules are a sequence, we have to split it for encoding every part of a sequence. Next to several steps are splitting sequence by letters and using One Hot Encoding. For encoding was used One Hot encoder from sklearn. As a result, we received an array with 26 encoded categories for each row of input data. Taking into account that task is binary classification and classes are represented as integer numbers, we don't need to encode it.  "
+    "Taking into account that Protein molecules are a sequence, we have to split it for encoding every part of the sequence. Next comes the splitting sequence by letters and using One Hot Encoding. For encoding we used the One Hot encoder from sklearn. As a result, we received an array with 26 encoded categories for each row of input data. Taking into account that the task is a binary classification and the classes are represented as integer numbers, we don't need to encode it.  "
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "### Step 4. Splitting dataset for training and validation. \n",
     "\n",
-    "For calculation F1 metric dataset was split into train and validation subsets "
+    "For the calculation of the F1 metric, the dataset was split into train and validation subsets "
    ]
   },
   {
@@ -302,12 +302,7 @@
    "source": [
     "### Step 5. Training of model\n",
     "\n",
-    "Taking into account the conditions of task SVC was chosen as the main approach. SVM offers very high accuracy compared to other classifiers such as logistic regression, and decision trees. It is known for its kernel trick to handle nonlinear input spaces. It is used in a variety of applications such as face detection, intrusion detection, classification of emails, news articles and web pages, classification of genes, and handwriting recognition. As in encoding part we used skleran package for model training \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +681,7 @@
    "source": [
     "### Step 6. Calculation of metric\n",
     "\n",
-    "As a metric of the model was chosen F1 score. The score was calculated on the validation dataset and is equal to 91%. The pretty high metric shows that we choose the right approach and the model was trained pretty well "
+   
    ]
   },
   {
@@ -718,7 +713,7 @@
    "source": [
     "### Step 7. Reading and encoding dataset. Prediction of classes. \n",
     "\n",
-    "Same endocder was used for training dataset. Predicted classes were saved in CSV file. "
+    "Same endocder was used for the training dataset. Predicted classes were saved in a CSV file. "
    ]
   },
   {
