--- a/task_3/taks_3_v2/task_3.ipynb
+++ b/task_3/taks_3_v2/task_3.ipynb
@@ -161,7 +161,7 @@
    "source": [
     "### Step 3. Preparing data and One Hot Encoding.\n",
     "\n",
-    "Taking into account that Protein molecules are a sequence, we have to split it for encoding every part of the sequence. Next comes the splitting sequence by letters and using One Hot Encoding. For encoding we used the One Hot encoder from sklearn. As a result, we received an array with 26 encoded categories for each row of input data. Taking into account that the task is a binary classification and the classes are represented as integer numbers, we don't need to encode it.  "
+    "Taking into account that Protein molecules are a sequence, we have to split it for encoding every part of the sequence. Next comes the splitting  of thesequence by letters and using the One Hot Encoding approach. For encoding we used the One Hot encoder from the sklearn package. As a result, we received an array with 26 encoded categories for each row of the input data. "
    ]
   },
   {
@@ -280,7 +280,7 @@
    "source": [
     "### Step 4. Splitting dataset for training and validation. \n",
     "\n",
-    "For the calculation of the F1 metric, the dataset was split into train and validation subsets "
+    "For calculation F1 metric dataset was split into train and validation subsets "
    ]
   },
   {
@@ -302,7 +302,12 @@
    "source": [
     "### Step 5. Training of model\n",
     "\n",
-   
+    "Taking into account the conditions of task SVC was chosen as the main approach.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,13 +487,7 @@
       "100800/100800 [==============================] - 1s 7us/step - loss: 0.0168 - acc: 0.9933\n",
       "Epoch 79/150\n",
       "100800/100800 [==============================] - 1s 7us/step - loss: 0.0168 - acc: 0.9936\n",
-      "Epoch 80/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 80/150\n",
       "100800/100800 [==============================] - 1s 7us/step - loss: 0.0168 - acc: 0.9937\n",
       "Epoch 81/150\n",
       "100800/100800 [==============================] - 1s 6us/step - loss: 0.0168 - acc: 0.9933\n",
@@ -681,7 +680,7 @@
    "source": [
     "### Step 6. Calculation of metric\n",
     "\n",
-   
+    "As a metric for the model we chose the F1 score. The score was calculated on the validation dataset."
    ]
   },
   {
@@ -713,7 +712,7 @@
    "source": [
     "### Step 7. Reading and encoding dataset. Prediction of classes. \n",
     "\n",
-    "Same endocder was used for the training dataset. Predicted classes were saved in a CSV file. "
+    "The same endocder was used for training dataset. Predicted classes were saved in CSV file. "
    ]
   },
   {
@@ -785,9 +784,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python_3.6"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -799,7 +798,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
