Add task_4 14 epoch 256dim

--- a/task_4/task_4.ipynb
+++ b/task_4/task_4.ipynb
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 103,
    "metadata": {
     "scrolled": false
    },
@@ -1488,12 +1488,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2927e102bf3940cda0f02aa4b0d13300",
+       "model_id": "91504d5893be4afd90ecd8e30ca5f6dc",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=8920.0), HTML(value='')))"
+       "HBox(children=(FloatProgress(value=0.0, max=3568.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -1502,7 +1502,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "84cc4e9e32f14d1bad818ab694b972f0",
+       "model_id": "3755a252c69d4e588b8a780a98444795",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1536,13 +1536,14 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 1/10]: Loss 0.419 (0.457), Val Accuracy 0.6878151260504202, Train Accuracy 0.6319716928251121\n"
+      "\r",
+      "[Epoch 11/14]: Loss 0.120 (0.132), Val Accuracy 0.7428571428571429, Train Accuracy 0.7131446188340808\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "339bfa91d4284fff92b18fc5d2c284a4",
+       "model_id": "ebe6bae8e2714b2caf29b2e43520aeab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1576,13 +1577,14 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 2/10]: Loss 0.300 (0.364), Val Accuracy 0.6957983193277311, Train Accuracy 0.6385054652466368\n"
+      "\r",
+      "[Epoch 12/14]: Loss 0.117 (0.129), Val Accuracy 0.7323529411764705, Train Accuracy 0.7191178531390134\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da64e7b375744d499956c8148984352d",
+       "model_id": "dfc1b1153c66457a9a435b6078cef52f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1616,13 +1618,14 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 3/10]: Loss 0.284 (0.296), Val Accuracy 0.6764705882352942, Train Accuracy 0.6467558856502242\n"
+      "\r",
+      "[Epoch 13/14]: Loss 0.134 (0.128), Val Accuracy 0.7327731092436974, Train Accuracy 0.722411014573991\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4477fb50d15e4e26962c7a5ef5f74152",
+       "model_id": "070b62ad21744d788f02f5c4d78a5718",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1656,247 +1659,8 @@
       "\r",
       "\r",
       "\r",
-      "[Epoch 4/10]: Loss 0.181 (0.240), Val Accuracy 0.704201680672269, Train Accuracy 0.6621706838565022\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6509970dd7c143bd8661ee4959425d8a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 5/10]: Loss 0.251 (0.200), Val Accuracy 0.7226890756302521, Train Accuracy 0.6717523822869955\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a347f87a86d94010a02898be10017936",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 6/10]: Loss 0.179 (0.168), Val Accuracy 0.7134453781512605, Train Accuracy 0.6831207959641256\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31afcecfd62042fc8157c24e8e40ba02",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 7/10]: Loss 0.146 (0.150), Val Accuracy 0.7315126050420168, Train Accuracy 0.690985846412556\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "73ff87de9112450799d0cb5ceabf589a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 8/10]: Loss 0.162 (0.139), Val Accuracy 0.7407563025210084, Train Accuracy 0.7013558015695067\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "423dfa1cc7b248a4aa417c8d5dc975ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 9/10]: Loss 0.135 (0.133), Val Accuracy 0.7357142857142858, Train Accuracy 0.7124264293721974\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "520b66da0dc2468bba03b829de1fdd29",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(FloatProgress(value=0.0, max=37.0), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "\r",
-      "[Epoch 10/10]: Loss 0.137 (0.130), Val Accuracy 0.7357142857142858, Train Accuracy 0.7173486547085202\n"
+      "[Epoch 14/14]: Loss 0.116 (0.126), Val Accuracy 0.738655462184874, Train Accuracy 0.7276835762331838\n"
      ]
     }
    ],
@@ -1906,14 +1670,15 @@
     "\n",
     "criterion_pretrained = nn.TripletMarginLoss(margin=0.2)\n",
     "optimizer_pretrained = torch.optim.Adam(params_to_update, lr=0.001)\n",
-    "#scheduler_pretrained = None\n",
-    "scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[10], gamma=0.5)\n",
+    "scheduler_pretrained = None\n",
+    "#scheduler_pretrained = torch.optim.lr_scheduler.MultiStepLR(optimizer_pretrained, milestones=[10], gamma=0.5)\n",
     "#scheduler_pretrained = torch.optim.lr_scheduler.StepLR(optimizer_pretrained, 2, gamma=0.1)\n",
     "\n",
     "batch_size = 64\n",
-    "epochs_pretrained = 10\n",
+    "epochs_pretrained = 4\n",
+    "starting_epoch = 10\n",
     "\n",
-    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, epochs=epochs_pretrained, model_name='densenet161_model')"
+    "Training().start(model_pretrained, optimizer_pretrained, train_set, criterion_pretrained, scheduler_pretrained, batch_size, starting_epoch=starting_epoch, epochs=epochs_pretrained, model_name='densenet161_model')"
    ]
   },
   {
@@ -1925,13 +1690,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e74f01f31704e88a6ed364919473857",
+       "model_id": "6095224407eb48c1ad9d63d1a37bfbd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1956,14 +1721,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set accuracy [pre-trained model]: 0.7290580039906186\n"
+      "Train set accuracy [pre-trained model]: 0.7373892953407778\n"
      ]
     }
    ],
@@ -1973,13 +1738,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbc13f22082440a1854c4ffc6fc56e7b",
+       "model_id": "f6af14a2837f423ab1e152b105022302",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2005,7 +1770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
